[package]
name = "solana-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.14"  # Use the version compatible with your Solana setup
mongodb = "2.6"  # For off-chain persistence, adjust version as needed

[dev-dependencies]
solana-program-test = "1.14"

[[bin]]
name = "solana-marketplace"
path = "src/lib.rs"